sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:16: error: ambiguous reference to overloaded definition,
both method backMinus in class AlgShellSort of type (indSorted: Int, gap: Int)Unit
and  method backMinus in class AlgShellSort of type (indSorted: Int, gap: Int)Unit
match argument types (Int,Int)
    backMinus(j, gap);
    ^AlgShellSort:27: error: not found: value igap
      copy(indSorted-igap*,indSorted-gap*i+1);
                     ^AlgShellSort:45: error: not found: value igap
      copy(indSorted-igap*,indSorted-gap*i+1);
                     ^AlgShellSort:40: error: method backMinus is defined twice
  conflicting symbols both originated in file 'plm.runtime1.AlgShellSort'
def backMinus(indSorted:Int, gap:Int){
    ^